Fix: hide scrollbar

--- a/pages/job/Job.module.scss
+++ b/pages/job/Job.module.scss
@@ -235,6 +235,12 @@
       }
     }
 
+    @include msd {
+      &Body::-webkit-scrollbar {
+        display: none;
+      }
+    }
+
     &SubTitle {
       margin-top: 18px;
       display: block;
